# cortina

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  coverage.yml  release.yml
.plan/: lamella-hook-migration.md
docs/: README.md  adapter-evaluation-codex.md  lamella-boundary.md  normalized-lifecycle-vocabulary.md
docs/plans/: README.md
src/: cli.rs  env_gate.rs  event_envelope.rs  events.rs  handoff_audit.rs  handoff_lint.rs  handoff_paths.rs  main.rs  outcomes.rs  pipeline.rs  policy.rs  risk.rs  rules.rs  signals.rs  status.rs  statusline.rs  test_support.rs  tool_usage.rs  utils.rs  verification.rs
src/adapters/: claude_code.rs  codex.rs  mod.rs  volva.rs
src/events/: adapter_events.rs  normalized_lifecycle.rs  outcome_events.rs
src/hooks/: executor.rs  fp_check.rs  gate_guard.rs  message_display.rs  mod.rs  node_context.rs  parse_error.rs  post_compact.rs  post_tool_use.rs  pre_commit.rs  pre_compact.rs  pre_tool_use.rs  stop.rs  subagent_stop.rs  trigger_word.rs  types.rs  user_prompt_submit.rs
src/hooks/post_tool_use/: bash.rs  edits.rs  memory_store.rs  pending.rs  secret_redaction.rs  tests.rs
src/hooks/pre_tool_use/: tests.rs
src/hooks/stop/: osc_notify.rs  summary.rs  tests.rs  tool_usage_emit.rs  transcript.rs
src/jsonl/: blocks.rs  compaction.rs  lines.rs  metadata.rs  metrics.rs  mod.rs
src/permissions/: mod.rs
src/utils/: canopy_client.rs  command_signals.rs  hyphae_client.rs  session_scope.rs  session_store.rs  state.rs  tests.rs
tests/: hook_executor_stub.rs  hook_stdout_purity.rs
