[package]
name = "cortina"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["William Newton"]
description = "Hook runner for AI coding agents — intercepts tool calls, captures feedback signals"
license = "MIT"
repository = "https://github.com/basidiocarp/cortina"
keywords = ["basidiocarp", "hooks", "mcp", "feedback", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cortina"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
spore = { git = "https://github.com/basidiocarp/spore", rev = "0bc2e878010e75e30e26fa517d747e97d59628b0", features = ["otel"] }
tracing = "0.1"

rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
