[package]
name = "cortina"
version = "0.10.0"
edition = "2024"
rust-version = "1.85"
authors = ["William Newton"]
description = "Hook runner for AI coding agents — intercepts tool calls, captures feedback signals"
license = "MIT"
repository = "https://github.com/basidiocarp/cortina"
keywords = ["basidiocarp", "hooks", "mcp", "feedback", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "cortina"
path = "src/lib.rs"

[[bin]]
name = "cortina"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
spore = { git = "https://github.com/basidiocarp/spore", rev = "d97a226a9a4051e42fbe1831aae4c811e7c65ac6", features = ["otel"] }
tracing = "0.1"
memchr = "2"

rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = { level = "warn", priority = -1 }
